--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -24,5 +24,5 @@ command:
     reloaded: "Reloaded the config successfully!"
 
 event:
-  home-removed: "&cYour home '%s' was removed because it was in enemy land / warzone."
-  sethome-prevented: "&cYou cannot set a home here because you are in enemy land / warzone."
+  home-removed: "&cYour home '%s' was removed because you do not have permission to set a home in this world."
+  sethome-prevented: "&cYou cannot set a home here."
